<resources>
    <string name="app_name">Simbak cerdas</string>
    <string name="title_menu_child">Daftar Anak</string>
    <string name="title_menu_mother">Daftar Ibu</string>
    <string name="title_menu_pregnancy">Daftar Kehamilan</string>
    <string name="title_menu_pregnancy_2">Riwayat Kehamilan</string>
    <string name="title_menu_pregnancy_history">Pemeriksaan Kehamilan</string>
    <string name="title_menu_child_history">Pemeriksaan Anak</string>
    <string name="title_child_history_detail">Riwayat Pemeriksaan Anak</string>
    <string name="title_child">Data Anak</string>
    <string name="title_mother">Data Ibu</string>
    <string name="title_history">Riwayat</string>
    <string name="title_child_history">Data Riwayat Anak</string>
    <string name="title_create_child">Input Data Anak</string>
    <string name="title_edit_child">Edit Data Anak</string>
    <string name="title_create_mother">Input Data Ibu</string>
    <string name="title_edit_mother">Edit Data Ibu</string>
    <string name="title_create_child_history">Input Data Riwayat Anak</string>
    <string name="title_edit_child_history">Edit Data Riwayat Anak</string>
    <string name="title_create_pregnancy">Input Data Kehamilan</string>
    <string name="title_edit_pregnancy">Edit Data Kehamilan</string>
    <string name="title_create_pregnancy_history">Input Data Riwayat Pemeriksaan Kehamilan</string>
    <string name="title_edit_pregnancy_history">Edit Data Riwayat Pemeriksaan Kehamilan</string>
    <string name="title_create_account">Buat Akun</string>
    <string name="title_activation">Kode Aktivasi</string>
    <string name="title_account_activation">Aktivasi Akun</string>
    <string name="title_forgot_password">Lupa Password</string>
    <string name="title_other_articles">Artikel Lainnya</string>
    <string name="title_Article">Artikel</string>
    <string name="title_pregnancies">Kehamilan Ibu Hamil</string>
    <string name="title_pregnancy_history">Riwayat Pemeriksaan Kehamilan Saat Ini</string>
    <string name="title_immunization">Riwayat Imunisasi</string>
    <string name="title_menu_immunizations">Jadwal Imunisasi</string>
    <string name="title_form_immunization">Vaksinasi Bayi</string>
    <string name="title_video">Video</string>
    <string name="title_infographic">Infografis</string>
    <string name="title_promotion">Promosi</string>
    <string name="submit_ok">Data berhasil disimpan</string>
    <string name="error_500">Server Error : Kesalahan Server Dari Dalam</string>
    <string name="error_400">Server Error : Permintaan yang buruk</string>
    <string name="error_403">Server Error : Terlarang</string>
    <string name="error_404">Server Error : Tidak ditemukan</string>
    <string name="error_xxx">Error Tidak Ditemukan</string>
    <string name="error_parsing">Format Data Cacat</string>
    <string name="error_device_not_found">Format Data Cacat</string>
    <string name="error_coming_soon">Coming Soon...</string>
    <string name="error_name">Nama terlalu pendek</string>
    <string name="error_email">Email tidak valid</string>
    <string name="error_phone_number">Nomor Telepon Genggam tidak valid</string>
    <string name="error_username_short">Username terlalu pendek</string>
    <string name="error_password_short">Password terlalu pendek</string>
    <string name="error_password_not_match">Konfirmasi Password tidak sesuai</string>
    <string name="error_birth_date">Tanggal lahir harus diisi</string>
    <string name="error_history_date">Tanggal Riwayat harus diisi</string>
    <string name="error_first_length">Tinggi Pertama harus diisi</string>
    <string name="error_first_weight">Berat Pertama harus diisi</string>
    <string name="error_first_head_round">Lingkar Kepala harus diisi</string>
    <string name="error_height">Panjang Badan harus diisi</string>
    <string name="error_height_person">Tinggi Badan harus diisi</string>
    <string name="error_weight">Berat Badan harus diisi</string>
    <string name="error_head_round">Lingkar Kepala harus diisi</string>
    <string name="error_temperature">Suhu Badan harus diisi</string>
    <string name="error_activation">Kode Aktivasi tidak valid</string>
    <string name="error_spouse_name">Nama Suami harus diisi</string>
    <string name="error_address">Alamat harus diisi</string>
    <string name="error_state">Provinsi tidak valid</string>
    <string name="error_district">Kota/Kabupaten tidak valid</string>
    <string name="error_blood_pressure_top">Tekanan Darah harus diisi</string>
    <string name="error_blood_pressure_bottom">Tekanan Darah harus diisi</string>
    <string name="error_mother_data">Silakan lengkapi data di menu ibu terlebih dahulu</string>
    <string name="error_article_not_found">Artikel tidak dapat ditemukan.</string>
    <string name="error_last_period_date">Terakhir Menstruasi harus diisi</string>
    <string name="error_start_weight">Berat Saat Mulai Hamil harus diisi</string>
    <string name="error_start_height">Tinggi Saat Mulai Hamil harus diisi</string>
    <string name="error_pregnancy_date">Tanggal Pemeriksaan harus diisi</string>
    <string name="error_baby_weight">Berat Janin harus diisi</string>
    <string name="error_gender_prediction">Prediksi Kelamin harus diisi</string>
    <string name="error_amniotic_condition">Kondisi Air Ketuban harus diisi</string>
    <string name="error_immunization_date">Tanggal Immunisasi harus diisi</string>
    <string name="error_video_not_found">Video tidak ditemukan</string>
    <string name="error_infographic_not_found">Infografis tidak ditemukan</string>
    <string name="error_legal_file">Surat Legalisasi harus ada</string>
    <string name="error_creating_image">Share data gagal</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error_fundus_height">Tinggi Fundus harus diisi</string>
    <string name="error_fetus_height">Letak Janin harus diisi</string>
    <string name="error_heart_beat">Detak Jantung harus diisi</string>
    <string name="error_leg">Kaki Bengkak harus diisi</string>
    <string name="error_lab">Hasil Pemeriksaan Lab harus diisi</string>
    <string name="error_treatment">Tindakan harus diisi</string>
    <string name="error_suggestion">Nasihat harus diisi</string>
    <string name="error_next_visit_date">Kapan Harus Kembali harus diisi</string>
    <string name="login">Sudah memiliki akun? Masuk</string>
    <string name="login_here"> disini</string>
    <string name="signup">Belum memiliki akun? Daftar</string>
    <string name="signup_here"> disini</string>
    <string name="signup_done">Pendaftaran Berhasil, silahkan masuk dengan akun anda.</string>
    <string name="resend_code_done">Kode Aktivasi telah dikirim ulang</string>
    <string name="forgot_done">Data Pengguna telah dikirim ke nomor handphone anda.</string>
    <string name="tips_name">minimal 4 karakter</string>
    <string name="tips_username">minimal 4 karakter</string>
    <string name="tips_email">gunakan email aktif</string>
    <string name="tips_phone_number">Gunakan nomor aktif karena untuk aktivasi akun</string>
    <string name="tips_password">minimal 8 karakter</string>
    <string name="tips_confirm_password">isi ulang Password</string>
    <string name="tips_state">asal Provinsi</string>
    <string name="tips_district">asal Kota/Kabupaten</string>
    <string name="tips_legal_file">asal Kota/Kabupaten</string>
    <string name="hint_name">Nama</string>
    <string name="hint_username">Username</string>
    <string name="hint_email_phone">Email/No HP</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Nomor Telepon Genggam</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Konfirmasi Password</string>
    <string name="hint_activation">Kode Aktivasi</string>
    <string name="hint_search">Cari</string>
    <string name="hint_birth_date">Tanggal Lahir</string>
    <string name="hint_history_date">Tanggal Riwayat</string>
    <string name="hint_mother">Nama Ibu</string>
    <string name="hint_gender">Jenis Kelamin</string>
    <string name="hint_blood_type">Golongan Darah</string>
    <string name="hint_first_length">Panjang Badan Saat Lahir</string>
    <string name="hint_first_weight">Berat Badan Saat Lahir</string>
    <string name="hint_first_head_round">Lingkar Kepala</string>
    <string name="hint_height">Panjang Badan</string>
    <string name="hint_height_child">Panjang Badan Saat Lahir</string>
    <string name="hint_height_person">Tinggi Badan</string>
    <string name="hint_weight">Berat Badan</string>
    <string name="hint_weight_child">Berat Badan Saat Lahir</string>
    <string name="hint_head_round">Lingkar Kepala</string>
    <string name="hint_cm">cm</string>
    <string name="hint_kg">Kg</string>
    <string name="hint_gram">gram</string>
    <string name="hint_note">Catatan</string>
    <string name="hint_celcius">°C</string>
    <string name="hint_temperature">Suhu Badan</string>
    <string name="hint_imt">IMT Rate</string>
    <string name="hint_spouse_name">Nama Suami</string>
    <string name="hint_address">Alamat</string>
    <string name="hint_state">Provinsi</string>
    <string name="hint_district">Kota/Kabupaten</string>
    <string name="hint_blood_pressure">Tekanan Darah</string>
    <string name="hint_blood_pressure_top">Tekanan Darah Atas</string>
    <string name="hint_blood_pressure_bottom">Tekanan Darah Bawah</string>
    <string name="hint_last_period_date">Terakhir Menstruasi</string>
    <string name="hint_start_weight">Berat Saat Mulai Hamil</string>
    <string name="hint_start_height">Tinggi Saat Mulai Hamil</string>
    <string name="hint_period_type">Periode Menstruasi</string>
    <string name="hint_weight_gain">Penambahan Berat Badan</string>
    <string name="hint_top">/</string>
    <string name="hint_bottom"></string>
    <string name="hint_pregnancy_date">Tanggal Pemeriksaan</string>
    <string name="hint_baby_weight">Berat Janin</string>
    <string name="hint_gender_prediction">Prediksi Kelamin</string>
    <string name="hint_amniotic_condition">Kondisi Air Ketuban</string>
    <string name="hint_take_photo">Ambil Photo</string>
    <string name="hint_choose_photo">Pilih Photo</string>
    <string name="hint_immunization_date">Tanggal Imunisasi</string>
    <string name="hint_legal_file">Surat Legalisasi Posyandu Kecamatan</string>
    <string name="button_submit">Simpan</string>
    <string name="button_send">Kirim</string>
    <string name="button_resend_code">Kirim Kode Aktivasi</string>
    <string name="button_cancel">Batal</string>
    <string name="button_next">Selanjutnya</string>
    <string name="button_prev">Sebelumnya</string>
    <string name="button_finish">Selesai</string>
    <string name="warning">Peringatan</string>
    <string name="warning_signup">Anda akan menghentikan proses registrasi?</string>
    <string name="warning_activation">Anda akan menghentikan proses aktivasi?</string>
    <string name="warning_forgot">Anda akan menghentikan proses lupa Password?</string>
    <string name="warning_create_child">Anda akan menghentikan proses input data anak?</string>
    <string name="warning_edit_child">Anda akan menghentikan proses edit data anak?</string>
    <string name="warning_create_child_history">Anda akan menghentikan proses input data riwayat anak?</string>
    <string name="warning_edit_child_history">Anda akan menghentikan proses edit data riwayat anak?</string>
    <string name="warning_edit_baby_histories">Anda akan menghentikan proses edit data pemeriksaan anak?</string>
    <string name="warning_create_mother">Anda akan menghentikan proses input data ibu?</string>
    <string name="Welcome">Selamat \nDatang</string>
    <string name="forgot">Lupa Password?</string>
    <string name="activation_account">Aktivasi Akun</string>
    <string name="close">X tutup</string>
</resources>