<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:padding="5dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">
        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="2dp"
            android:layout_alignParentRight="true"
            android:text="@string/close" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title_form_immunization"/>

    <Spinner
        android:id="@+id/vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/form_text_size"
        style="@style/AppSpinner"
        android:padding="10dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/immunization_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:layout_toLeftOf="@id/immunization_icon"
            android:singleLine="true"
            android:hint="@string/hint_immunization_date" />

        <ImageView
            android:id="@+id/immunization_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:paddingTop="20dp"
            android:background="@drawable/ic_date_range_black_24dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/holderempty"
        android:text="@string/button_submit"
        android:textColor="@color/link"
        android:textSize="@dimen/form_text_size"
        android:textStyle="bold" />

</LinearLayout>