<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackground"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="256dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/logo_dinkes"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/Welcome"
                android:textColor="#ffffff"
                android:textSize="40sp" />

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="20dp"-->
                <!--android:text="@string/LatinIbu"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:textColor="#ffffff"-->
                <!--android:textSize="15sp" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/loginbox"
                    android:hint="@string/hint_email_phone"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:textColorHint="#ffffff"
                    android:singleLine="true"
                    android:nextFocusDown="@id/password"
                    android:textSize="20sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeColor="@color/white"
                    app:passwordToggleTint="@color/white"
                    app:hintEnabled="false"
                    android:textColorHint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="340dp"
                        android:layout_height="50dp"
                        android:background="@drawable/loginbox"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:nextFocusUp="@id/username"
                        android:imeOptions="actionSend"
                        android:hint="@string/hint_password"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textColorHint="#ffffff"
                        />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="onClickLogin"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/newbuttonlogin"/>

                <LinearLayout
                    android:id="@+id/swap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickLogin"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/signup"
                        android:textColorLink="#0000ff"
                        android:textColor="#ffffff" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/signup_here"
                        android:textColorLink="@color/link"
                        android:textColor="@color/link" />

                </LinearLayout>

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickLogin"
                    android:text="@string/forgot"
                    android:visibility="gone"
                    android:textColor="@color/link" />

                <TextView
                    android:id="@+id/resend"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickLogin"
                    android:layout_marginTop="10dp"
                    android:text="@string/activation_account"
                    android:textColor="@color/link" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>